--- a/index.html
+++ b/index.html
@@ -1,37 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Welkom bij 1I</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
+
 <body>
+    <!-- Dit doet Gijs -->
+    <header>
+
+    </header>
     <main>
+        <!-- Dit doet Semih -->
         <article>
 
         </article>
-    <section>
-        <div>
+        <section>
+            <div>
 
-        </div>
-    </section>
-    <article>
+            </div>
+        </section>
+        <article>
 
-    </article>
-    <section>
-        <div>
+        </article>
+        <section>
+            <div>
 
-        </div>
-    </section>
-    <section>
-        
-    </section>
+            </div>
+        </section>
+        <section>
+
+        </section>
     </main>
     <footer>
-        
+
     </footer>
     <!-- Your content goes here -->
-  <script src="scripts/script.js"></script>
+    <script src="scripts/script.js"></script>
 </body>
 
 </html>
