--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <!-- Dit doet Gijs -->
+    <!-- Dit doet Roxy -->
     <header>
 
     </header>
@@ -17,23 +17,29 @@
         <article>
 
         </article>
+        <!-- Dit doet Gijs -->
         <section>
             <div>
 
             </div>
         </section>
+        <!-- Dit doet Roxy -->
         <article>
 
         </article>
+        <!-- Dit doet Gijs -->
         <section>
             <div>
 
             </div>
         </section>
+        <!-- Dit doet Gijs -->
         <section>
 
         </section>
+        <!-- Dit doet Gijs -->
     </main>
+    <!-- Dit doet Gijs -->
     <footer>
 
     </footer>
