--- a/index.html
+++ b/index.html
@@ -19,8 +19,27 @@
         </article>
         <!-- Dit doet Gijs -->
         <section>
-            <div>
+            <div class="wave">
+                <svg class="wave1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+                    <path fill="black" fill-opacity="1" d="M0,128L48,112C96,96,192,64,288,45.35
+         C384,26.5,480,21.5,576,34.65
+         C672,48,768,80,864,98.65
+         C960,117.5,1056,122.5,1152,106.65
+         C1248,90.5,1344,53.5,1392,34.65
+         L1440,16L1440,160L0,160Z">
+                    </path>
 
+                </svg>
+                <svg class="wave2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+                    <path fill="black" fill-opacity="1" d="M0,128L48,112C96,96,192,64,288,45.35
+         C384,26.5,480,21.5,576,34.65
+         C672,48,768,80,864,98.65
+         C960,117.5,1056,122.5,1152,106.65
+         C1248,90.5,1344,53.5,1392,34.65
+         L1440,16L1440,0L0,0Z">
+                    </path>
+
+                </svg>
             </div>
         </section>
         <!-- Dit doet Roxy -->
@@ -40,7 +59,31 @@
         <!-- Dit doet Gijs -->
     </main>
     <!-- Dit doet Gijs -->
-    <footer>
+    <footer class="footer-layout">
+        <article class="logo-madeby">
+            <p class="madeby">
+                Gemaakt door:
+            </p>
+            <img class="logo" src="assets/image.png">
+        </article>
+        <article class="madeby 1">
+            <img class="logo" src="assets/roxy.png">
+            <p class="roxy">
+                Roxy Fokker
+            </p>
+        </article>
+        <article class="madeby 2">
+            <img class="logo" src="assets/roxy.png">
+            <p class="roxy">
+                Roxy Fokker
+            </p>
+        </article>
+        <article class="madeby 3">
+            <img class="logo" src="assets/roxy.png">
+            <p class="roxy">
+                Roxy Fokker
+            </p>
+        </article>
 
     </footer>
     <script src="scripts/script.js"></script>
