--- a/index.html
+++ b/index.html
@@ -73,15 +73,15 @@
             </p>
         </article>
         <article class="madeby 2">
-            <img class="logo" src="assets/roxy.png">
+            <img class="logo" src="assets/semih.png">
             <p class="roxy">
-                Roxy Fokker
+                Semih Demir
             </p>
         </article>
         <article class="madeby 3">
-            <img class="logo" src="assets/roxy.png">
+            <img class="logo" src="assets/gijs.png">
             <p class="roxy">
-                Roxy Fokker
+                Gijs Nagtegaal
             </p>
         </article>
 
