footer version for review

--- a/index.html
+++ b/index.html
@@ -67,19 +67,19 @@
             <img class="logo" src="assets/image.png">
         </article>
         <article class="madeby 1">
-            <img class="logo" src="assets/roxy.png">
+            <img class="image-footer" src="assets/roxy.png">
             <p class="roxy">
                 Roxy Fokker
             </p>
         </article>
         <article class="madeby 2">
-            <img class="logo" src="assets/semih.png">
+            <img class="image-footer" src="assets/semih.png">
             <p class="roxy">
                 Semih Demir
             </p>
         </article>
         <article class="madeby 3">
-            <img class="logo" src="assets/gijs.png">
+            <img class="image-footer" src="assets/gijs.png">
             <p class="roxy">
                 Gijs Nagtegaal
             </p>
