--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
         </article>
         <!-- Dit doet Gijs -->
         <section>
-            <div class="wave">
                 <svg class="wave1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
                     <path fill="black" fill-opacity="1" d="M0,128L48,112C96,96,192,64,288,45.35
          C384,26.5,480,21.5,576,34.65
@@ -40,7 +39,6 @@
                     </path>
 
                 </svg>
-            </div>
         </section>
         <!-- Dit doet Roxy -->
         <article>
@@ -48,13 +46,39 @@
         </article>
         <!-- Dit doet Gijs -->
         <section>
-            <div>
+                <svg class="wave1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+                    <path fill="black" fill-opacity="1" d="M0,128L48,112C96,96,192,64,288,45.35
+         C384,26.5,480,21.5,576,34.65
+         C672,48,768,80,864,98.65
+         C960,117.5,1056,122.5,1152,106.65
+         C1248,90.5,1344,53.5,1392,34.65
+         L1440,16L1440,160L0,160Z">
+                    </path>
 
-            </div>
+                </svg>
+                <svg class="wave2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+                    <path fill="black" fill-opacity="1" d="M0,128L48,112C96,96,192,64,288,45.35
+         C384,26.5,480,21.5,576,34.65
+         C672,48,768,80,864,98.65
+         C960,117.5,1056,122.5,1152,106.65
+         C1248,90.5,1344,53.5,1392,34.65
+         L1440,16L1440,0L0,0Z">
+                    </path>
+
+                </svg>
         </section>
         <!-- Dit doet Gijs -->
         <section>
-
+            <article class="wrapper-location">
+                <img class="location-image" src="assets/aquarium.png">
+                <img class="location-image" src="assets/roomforthought.png">
+                <img class="location-image" src="assets/imgtest.png">
+                <img class="location-image" src="assets/imgtest.png">
+                <img class="location-image" src="assets/imgtest.png">
+                <img class="location-image" src="assets/imgtest.png">
+                <img class="location-image" src="assets/imgtest.png">
+                <img class="location-image" src="assets/imgtest.png">
+            </article>
         </section>
         <!-- Dit doet Gijs -->
     </main>
