Begin van search functie

--- a/index.html
+++ b/index.html
@@ -15,7 +15,18 @@
     <main>
         <!-- Dit doet Semih -->
         <article>
-
+            <div class="welcome-page">
+                <h1>Welkom bij 1I</h1>
+                <div class="welcome-text">
+                    <p>Zoek hieronder je klasgenoot op</p>
+                </div>
+                <div class="search">
+                    <form>
+                        <input type="search">
+                        <button type="submit"></button>
+                    </form>
+                </div>
+            </div>
         </article>
         <!-- Dit doet Gijs -->
         <section>
