-Afbeeldingen toegevoegd -mugshot article html -css comments -positionering afbeeldingen

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <main>
         <!-- Dit doet Semih -->
         <article>
-
+            
         </article>
         <!-- Dit doet Gijs -->
         <section>
@@ -43,8 +43,36 @@
             </div>
         </section>
         <!-- Dit doet Roxy -->
-        <article>
-
+        <article class="mugshot-article-container">
+            <h2>Alle Klasgenoten</h2>
+            <section class="mugshot-image-container">
+                <div class="mugshot">
+                    <img src="./assets/mugshots/student-1.png" alt="">
+                    <h3>Naam</h3>
+                    <p>Leeftijd</p>
+                </div>
+                <div class="mugshot">
+                    <img src="./assets/mugshots/student-2.png" alt="">
+                    <h3 >Naam</h3>
+                    <p>Leeftijd</p>
+                </div>
+                <div class="mugshot">
+                    <img src="./assets/mugshots/student-3.png" alt="">
+                    <h3 >Naam</h3>
+                    <p>Leeftijd</p>
+                </div>
+                <div class="mugshot">
+                    <img src="./assets/mugshots/student-4.png" alt="">
+                    <h3>Naam</h3>
+                    <p>Leeftijd</p>
+                </div>
+                <div class="mugshot">
+                    <img src="./assets/mugshots/student-5.png" alt="">
+                    <h3>Naam</h3>
+                    <p>Leeftijd</p>
+                </div>
+            </section>
+            <button>Meer</button>
         </article>
         <!-- Dit doet Gijs -->
         <section>
