--- a/index.html
+++ b/index.html
@@ -10,12 +10,18 @@
 <body>
     <!-- Dit doet Roxy -->
     <header>
-
+        <nav>
+            <a href="#welcome"><img src="./assets/test-logo.png" alt=""></a>
+            <ul>
+                <li><a href="#students">Klasgenoten</a></li>
+                <li><a href="#locations">Locaties</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
         <!-- Dit doet Semih -->
         <article>
-            <div class="welcome-page">
+            <div id="welcome" class="welcome-page">
                 <h1>Welkom bij 1I</h1>
                 <div class="welcome-text">
                     <p>Zoek hieronder je klasgenoot op</p>
@@ -53,7 +59,7 @@
         </section>
         <!-- Dit doet Roxy -->
         <article class="mugshot-article-container">
-            <h2>Alle Klasgenoten</h2>
+            <h2 id="students">Alle Klasgenoten</h2>
             <section class="mugshot-image-container">
                 <div class="mugshot">
                     <img src="./assets/mugshots/student-1.png" alt="">
@@ -107,8 +113,8 @@
                 </svg>
         </section>
         <!-- Dit doet Gijs -->
-        <section>
-            <article class="wrapper-location">
+        <section id="locations">
+            <article  class="wrapper-location">
                 <img class="location-image" src="assets/aquarium.png">
                 <img class="location-image" src="assets/roomforthought.png">
                 <img class="location-image" src="assets/imgtest.png">
