--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <ul>
                 <li><a href="#students">Klasgenoten</a></li>
                 <li><a href="#locations">Locaties</a></li>
+                <li><a href="#credits">Credits</a></li>
             </ul>
         </nav>
     </header>
@@ -128,7 +129,7 @@
         <!-- Dit doet Gijs -->
     </main>
     <!-- Dit doet Gijs -->
-    <footer class="footer-layout">
+    <footer id="credits" class="footer-layout">
         <article class="logo-madeby">
             <p class="madeby">
                 Gemaakt door:
