html mugshot aangepast -div -> figure + figcaption -extra classes aangemaakt

--- a/index.html
+++ b/index.html
@@ -62,31 +62,46 @@
         <article class="mugshot-article-container">
             <h2 id="students">Alle Klasgenoten</h2>
             <section class="mugshot-image-container">
-                <div class="mugshot">
-                    <img src="./assets/mugshots/student-1.png" alt="">
-                    <h3>Naam</h3>
-                    <p>Leeftijd</p>
-                </div>
-                <div class="mugshot">
-                    <img src="./assets/mugshots/student-2.png" alt="">
-                    <h3 >Naam</h3>
-                    <p>Leeftijd</p>
-                </div>
-                <div class="mugshot">
-                    <img src="./assets/mugshots/student-3.png" alt="">
-                    <h3 >Naam</h3>
-                    <p>Leeftijd</p>
-                </div>
-                <div class="mugshot">
-                    <img src="./assets/mugshots/student-4.png" alt="">
-                    <h3>Naam</h3>
-                    <p>Leeftijd</p>
-                </div>
-                <div class="mugshot">
-                    <img src="./assets/mugshots/student-5.png" alt="">
-                    <h3>Naam</h3>
-                    <p>Leeftijd</p>
-                </div>
+                <figure class="mugshot">
+                    <img class="mugshot-first" src="./assets/mugshots/student-1.png" alt="">
+                    <img class="mugshot-after" src="./assets/mugshots/student-1-2.png" alt="">
+                    <figcaption>
+                        <h3>Naam</h3>
+                        <p>Leeftijd</p>
+                    </figcaption>
+                </figure>
+                <figure class="mugshot">
+                    <img class="mugshot-first" src="./assets/mugshots/student-2.png" alt="">
+                    <img class="mugshot-after" src="./assets/mugshots/student-2-2.png" alt="">
+                    <figcaption>
+                        <h3 >Naam</h3>
+                        <p>Leeftijd</p>
+                    </figcaption>
+                </figure>
+                <figure class="mugshot">
+                    <img class="mugshot-first" src="./assets/mugshots/student-3.png" alt="">
+                    <img class="mugshot-after" src="./assets/mugshots/student-3-2.png" alt="">
+                    <figcaption>
+                        <h3 >Naam</h3>
+                        <p>Leeftijd</p>
+                    </figcaption>
+                </figure>
+                <figure class="mugshot">
+                    <img class="mugshot-first" src="./assets/mugshots/student-4.png" alt="">
+                    <img class="mugshot-after" src="./assets/mugshots/student-4-2.png" alt="">
+                    <figcaption>
+                        <h3 >Naam</h3>
+                        <p>Leeftijd</p>
+                    </figcaption>
+                </figure>
+                <figure class="mugshot">
+                    <img class="mugshot-first" src="./assets/mugshots/student-5.png" alt="">
+                    <img class="mugshot-after" src="./assets/mugshots/student-5-2.png" alt="">
+                    <figcaption>
+                        <h3 >Naam</h3>
+                        <p>Leeftijd</p>
+                    </figcaption>
+                </figure>
                 </section>
                 <button>Meer</button>
             </article>
