mugshots styling veranderd figcaption hover

--- a/index.html
+++ b/index.html
@@ -102,6 +102,158 @@
                         <p>Leeftijd</p>
                     </figcaption>
                 </figure>
+                <figure class="mugshot">
+                    <img class="mugshot-first" src="./assets/mugshots/student-6.png" alt="">
+                    <img class="mugshot-after" src="./assets/mugshots/student-6-2.png" alt="">
+                    <figcaption>
+                        <h3 >Naam</h3>
+                        <p>Leeftijd</p>
+                    </figcaption>
+                </figure>
+                <figure class="mugshot">
+                    <img class="mugshot-first" src="./assets/mugshots/student-7.png" alt="">
+                    <img class="mugshot-after" src="./assets/mugshots/student-7-2.png" alt="">
+                    <figcaption>
+                        <h3 >Naam</h3>
+                        <p>Leeftijd</p>
+                    </figcaption>
+                </figure>
+                <figure class="mugshot">
+                    <img class="mugshot-first" src="./assets/mugshots/student-8.png" alt="">
+                    <img class="mugshot-after" src="./assets/mugshots/student-8-2.png" alt="">
+                    <figcaption>
+                        <h3 >Naam</h3>
+                        <p>Leeftijd</p>
+                    </figcaption>
+                </figure>
+                <figure class="mugshot">
+                    <img class="mugshot-first" src="./assets/mugshots/student-9.png" alt="">
+                    <img class="mugshot-after" src="./assets/mugshots/student-9-2.png" alt="">
+                    <figcaption>
+                        <h3 >Naam</h3>
+                        <p>Leeftijd</p>
+                    </figcaption>
+                </figure>
+                <figure class="mugshot">
+                    <img class="mugshot-first" src="./assets/mugshots/student-10.png" alt="">
+                    <img class="mugshot-after" src="./assets/mugshots/student-10-2.png" alt="">
+                    <figcaption>
+                        <h3 >Naam</h3>
+                        <p>Leeftijd</p>
+                    </figcaption>
+                </figure>
+                <figure class="mugshot">
+                    <img class="mugshot-first" src="./assets/mugshots/student-11.png" alt="">
+                    <img class="mugshot-after" src="./assets/mugshots/student-11-2.png" alt="">
+                    <figcaption>
+                        <h3 >Naam</h3>
+                        <p>Leeftijd</p>
+                    </figcaption>
+                </figure>
+                <figure class="mugshot">
+                    <img class="mugshot-first" src="./assets/mugshots/student-12.png" alt="">
+                    <img class="mugshot-after" src="./assets/mugshots/student-12-2.png" alt="">
+                    <figcaption>
+                        <h3 >Naam</h3>
+                        <p>Leeftijd</p>
+                    </figcaption>
+                </figure>
+                <figure class="mugshot">
+                    <img class="mugshot-first" src="./assets/mugshots/student-13.png" alt="">
+                    <img class="mugshot-after" src="./assets/mugshots/student-13-2.png" alt="">
+                    <figcaption>
+                        <h3 >Naam</h3>
+                        <p>Leeftijd</p>
+                    </figcaption>
+                </figure>
+                <figure class="mugshot">
+                    <img class="mugshot-first" src="./assets/mugshots/student-14.png" alt="">
+                    <img class="mugshot-after" src="./assets/mugshots/student-14-2.png" alt="">
+                    <figcaption>
+                        <h3 >Naam</h3>
+                        <p>Leeftijd</p>
+                    </figcaption>
+                </figure>
+                <figure class="mugshot">
+                    <img class="mugshot-first" src="./assets/mugshots/student-15.png" alt="">
+                    <img class="mugshot-after" src="./assets/mugshots/student-15-2.png" alt="">
+                    <figcaption>
+                        <h3 >Naam</h3>
+                        <p>Leeftijd</p>
+                    </figcaption>
+                </figure>
+                <figure class="mugshot">
+                    <img class="mugshot-first" src="./assets/mugshots/student-16.png" alt="">
+                    <img class="mugshot-after" src="./assets/mugshots/student-16-2.png" alt="">
+                    <figcaption>
+                        <h3 >Naam</h3>
+                        <p>Leeftijd</p>
+                    </figcaption>
+                </figure>
+                <figure class="mugshot">
+                    <img class="mugshot-first" src="./assets/mugshots/student-17.png" alt="">
+                    <img class="mugshot-after" src="./assets/mugshots/student-17-2.png" alt="">
+                    <figcaption>
+                        <h3 >Naam</h3>
+                        <p>Leeftijd</p>
+                    </figcaption>
+                </figure>
+                <figure class="mugshot">
+                    <img class="mugshot-first" src="./assets/mugshots/student-18.png" alt="">
+                    <img class="mugshot-after" src="./assets/mugshots/student-18-2.png" alt="">
+                    <figcaption>
+                        <h3 >Naam</h3>
+                        <p>Leeftijd</p>
+                    </figcaption>
+                </figure>
+                <figure class="mugshot">
+                    <img class="mugshot-first" src="./assets/mugshots/student-19.png" alt="">
+                    <img class="mugshot-after" src="./assets/mugshots/student-19-2.png" alt="">
+                    <figcaption>
+                        <h3 >Naam</h3>
+                        <p>Leeftijd</p>
+                    </figcaption>
+                </figure>
+                <figure class="mugshot">
+                    <img class="mugshot-first" src="./assets/mugshots/student-20.png" alt="">
+                    <img class="mugshot-after" src="./assets/mugshots/student-20-2.png" alt="">
+                    <figcaption>
+                        <h3 >Naam</h3>
+                        <p>Leeftijd</p>
+                    </figcaption>
+                </figure>
+                <figure class="mugshot">
+                    <img class="mugshot-first" src="./assets/mugshots/student-21.png" alt="">
+                    <img class="mugshot-after" src="./assets/mugshots/student-21-2.png" alt="">
+                    <figcaption>
+                        <h3 >Naam</h3>
+                        <p>Leeftijd</p>
+                    </figcaption>
+                </figure>
+                <figure class="mugshot">
+                    <img class="mugshot-first" src="./assets/mugshots/student-22.png" alt="">
+                    <img class="mugshot-after" src="./assets/mugshots/student-22-2.png" alt="">
+                    <figcaption>
+                        <h3 >Naam</h3>
+                        <p>Leeftijd</p>
+                    </figcaption>
+                </figure>
+                <figure class="mugshot">
+                    <img class="mugshot-first" src="./assets/mugshots/student-23.png" alt="">
+                    <img class="mugshot-after" src="./assets/mugshots/student-23-2.png" alt="">
+                    <figcaption>
+                        <h3 >Naam</h3>
+                        <p>Leeftijd</p>
+                    </figcaption>
+                </figure>
+                <figure class="mugshot">
+                    <img class="mugshot-first" src="./assets/mugshots/student-24.png" alt="">
+                    <img class="mugshot-after" src="./assets/mugshots/student-24-2.png" alt="">
+                    <figcaption>
+                        <h3 >Naam</h3>
+                        <p>Leeftijd</p>
+                    </figcaption>
+                </figure>
                 </section>
                 <button>Meer</button>
             </article>
