--- a/index.html
+++ b/index.html
@@ -66,192 +66,192 @@
                     <img class="mugshot-first" src="./assets/mugshots/student-1.png" alt="">
                     <img class="mugshot-after" src="./assets/mugshots/student-1-2.png" alt="">
                     <figcaption>
-                        <h3>Naam</h3>
-                        <p>Leeftijd</p>
+                        <h3>Gijs</h3>
+                        <p>00</p>
                     </figcaption>
                 </figure>
                 <figure class="mugshot">
                     <img class="mugshot-first" src="./assets/mugshots/student-2.png" alt="">
                     <img class="mugshot-after" src="./assets/mugshots/student-2-2.png" alt="">
                     <figcaption>
-                        <h3 >Naam</h3>
-                        <p>Leeftijd</p>
+                        <h3>Emre</h3>
+                        <p>00</p>
                     </figcaption>
                 </figure>
                 <figure class="mugshot">
                     <img class="mugshot-first" src="./assets/mugshots/student-3.png" alt="">
                     <img class="mugshot-after" src="./assets/mugshots/student-3-2.png" alt="">
                     <figcaption>
-                        <h3 >Naam</h3>
-                        <p>Leeftijd</p>
+                        <h3 >Caitlin</h3>
+                        <p>00</p>
                     </figcaption>
                 </figure>
                 <figure class="mugshot">
                     <img class="mugshot-first" src="./assets/mugshots/student-4.png" alt="">
                     <img class="mugshot-after" src="./assets/mugshots/student-4-2.png" alt="">
                     <figcaption>
-                        <h3 >Naam</h3>
-                        <p>Leeftijd</p>
+                        <h3 >Ayoub</h3>
+                        <p>00</p>
                     </figcaption>
                 </figure>
                 <figure class="mugshot">
                     <img class="mugshot-first" src="./assets/mugshots/student-5.png" alt="">
                     <img class="mugshot-after" src="./assets/mugshots/student-5-2.png" alt="">
                     <figcaption>
-                        <h3 >Naam</h3>
-                        <p>Leeftijd</p>
+                        <h3 >Ilias</h3>
+                        <p>00</p>
                     </figcaption>
                 </figure>
                 <figure class="mugshot">
                     <img class="mugshot-first" src="./assets/mugshots/student-6.png" alt="">
                     <img class="mugshot-after" src="./assets/mugshots/student-6-2.png" alt="">
                     <figcaption>
-                        <h3 >Naam</h3>
-                        <p>Leeftijd</p>
+                        <h3>Isaac</h3>
+                        <p>00</p>
                     </figcaption>
                 </figure>
                 <figure class="mugshot">
                     <img class="mugshot-first" src="./assets/mugshots/student-7.png" alt="">
                     <img class="mugshot-after" src="./assets/mugshots/student-7-2.png" alt="">
                     <figcaption>
-                        <h3 >Naam</h3>
-                        <p>Leeftijd</p>
+                        <h3>Kate</h3>
+                        <p>00</p>
                     </figcaption>
                 </figure>
                 <figure class="mugshot">
                     <img class="mugshot-first" src="./assets/mugshots/student-8.png" alt="">
                     <img class="mugshot-after" src="./assets/mugshots/student-8-2.png" alt="">
                     <figcaption>
-                        <h3 >Naam</h3>
-                        <p>Leeftijd</p>
+                        <h3>Kayleigh</h3>
+                        <p>00</p>
                     </figcaption>
                 </figure>
                 <figure class="mugshot">
                     <img class="mugshot-first" src="./assets/mugshots/student-9.png" alt="">
                     <img class="mugshot-after" src="./assets/mugshots/student-9-2.png" alt="">
                     <figcaption>
-                        <h3 >Naam</h3>
-                        <p>Leeftijd</p>
+                        <h3>Mohamed</h3>
+                        <p>00</p>
                     </figcaption>
                 </figure>
                 <figure class="mugshot">
                     <img class="mugshot-first" src="./assets/mugshots/student-10.png" alt="">
                     <img class="mugshot-after" src="./assets/mugshots/student-10-2.png" alt="">
                     <figcaption>
-                        <h3 >Naam</h3>
-                        <p>Leeftijd</p>
+                        <h3>Lesther</h3>
+                        <p>00</p>
                     </figcaption>
                 </figure>
                 <figure class="mugshot">
                     <img class="mugshot-first" src="./assets/mugshots/student-11.png" alt="">
                     <img class="mugshot-after" src="./assets/mugshots/student-11-2.png" alt="">
                     <figcaption>
-                        <h3 >Naam</h3>
-                        <p>Leeftijd</p>
+                        <h3>Khouloud</h3>
+                        <p>00</p>
                     </figcaption>
                 </figure>
                 <figure class="mugshot">
                     <img class="mugshot-first" src="./assets/mugshots/student-12.png" alt="">
                     <img class="mugshot-after" src="./assets/mugshots/student-12-2.png" alt="">
                     <figcaption>
-                        <h3 >Naam</h3>
-                        <p>Leeftijd</p>
+                        <h3>Khitam</h3>
+                        <p>00</p>
                     </figcaption>
                 </figure>
                 <figure class="mugshot">
                     <img class="mugshot-first" src="./assets/mugshots/student-13.png" alt="">
                     <img class="mugshot-after" src="./assets/mugshots/student-13-2.png" alt="">
                     <figcaption>
-                        <h3 >Naam</h3>
-                        <p>Leeftijd</p>
+                        <h3>Mouaad</h3>
+                        <p>00</p>
                     </figcaption>
                 </figure>
                 <figure class="mugshot">
                     <img class="mugshot-first" src="./assets/mugshots/student-14.png" alt="">
                     <img class="mugshot-after" src="./assets/mugshots/student-14-2.png" alt="">
                     <figcaption>
-                        <h3 >Naam</h3>
-                        <p>Leeftijd</p>
+                        <h3>Oumaima</h3>
+                        <p>00</p>
                     </figcaption>
                 </figure>
                 <figure class="mugshot">
                     <img class="mugshot-first" src="./assets/mugshots/student-15.png" alt="">
                     <img class="mugshot-after" src="./assets/mugshots/student-15-2.png" alt="">
                     <figcaption>
-                        <h3 >Naam</h3>
-                        <p>Leeftijd</p>
+                        <h3>Rowan</h3>
+                        <p>00</p>
                     </figcaption>
                 </figure>
                 <figure class="mugshot">
                     <img class="mugshot-first" src="./assets/mugshots/student-16.png" alt="">
                     <img class="mugshot-after" src="./assets/mugshots/student-16-2.png" alt="">
                     <figcaption>
-                        <h3 >Naam</h3>
-                        <p>Leeftijd</p>
+                        <h3>Roxy</h3>
+                        <p>25</p>
                     </figcaption>
                 </figure>
                 <figure class="mugshot">
                     <img class="mugshot-first" src="./assets/mugshots/student-17.png" alt="">
                     <img class="mugshot-after" src="./assets/mugshots/student-17-2.png" alt="">
                     <figcaption>
-                        <h3 >Naam</h3>
-                        <p>Leeftijd</p>
+                        <h3>Tjeerd</h3>
+                        <p>00</p>
                     </figcaption>
                 </figure>
                 <figure class="mugshot">
                     <img class="mugshot-first" src="./assets/mugshots/student-18.png" alt="">
                     <img class="mugshot-after" src="./assets/mugshots/student-18-2.png" alt="">
                     <figcaption>
-                        <h3 >Naam</h3>
-                        <p>Leeftijd</p>
+                        <h3>Tin</h3>
+                        <p>00</p>
                     </figcaption>
                 </figure>
                 <figure class="mugshot">
                     <img class="mugshot-first" src="./assets/mugshots/student-19.png" alt="">
                     <img class="mugshot-after" src="./assets/mugshots/student-19-2.png" alt="">
                     <figcaption>
-                        <h3 >Naam</h3>
-                        <p>Leeftijd</p>
+                        <h3>Semih</h3>
+                        <p>00</p>
                     </figcaption>
                 </figure>
                 <figure class="mugshot">
                     <img class="mugshot-first" src="./assets/mugshots/student-20.png" alt="">
                     <img class="mugshot-after" src="./assets/mugshots/student-20-2.png" alt="">
                     <figcaption>
-                        <h3 >Naam</h3>
-                        <p>Leeftijd</p>
+                        <h3>Seb</h3>
+                        <p>00</p>
                     </figcaption>
                 </figure>
                 <figure class="mugshot">
                     <img class="mugshot-first" src="./assets/mugshots/student-21.png" alt="">
                     <img class="mugshot-after" src="./assets/mugshots/student-21-2.png" alt="">
                     <figcaption>
-                        <h3 >Naam</h3>
-                        <p>Leeftijd</p>
+                        <h3>Sivar</h3>
+                        <p>00</p>
                     </figcaption>
                 </figure>
                 <figure class="mugshot">
                     <img class="mugshot-first" src="./assets/mugshots/student-22.png" alt="">
                     <img class="mugshot-after" src="./assets/mugshots/student-22-2.png" alt="">
                     <figcaption>
-                        <h3 >Naam</h3>
-                        <p>Leeftijd</p>
+                        <h3>Sven</h3>
+                        <p>00</p>
                     </figcaption>
                 </figure>
                 <figure class="mugshot">
                     <img class="mugshot-first" src="./assets/mugshots/student-23.png" alt="">
                     <img class="mugshot-after" src="./assets/mugshots/student-23-2.png" alt="">
                     <figcaption>
-                        <h3 >Naam</h3>
-                        <p>Leeftijd</p>
+                        <h3>Thomas</h3>
+                        <p>00</p>
                     </figcaption>
                 </figure>
                 <figure class="mugshot">
                     <img class="mugshot-first" src="./assets/mugshots/student-24.png" alt="">
                     <img class="mugshot-after" src="./assets/mugshots/student-24-2.png" alt="">
                     <figcaption>
-                        <h3 >Naam</h3>
-                        <p>Leeftijd</p>
+                        <h3>Angle</h3>
+                        <p>00</p>
                     </figcaption>
                 </figure>
                 </section>
