hover effecten + eye-bar

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
                         <h3>Gijs</h3>
                         <p>00</p>
                     </figcaption>
+                    <div class="eye-bar"></div><!-- iets anders dan div??????? -->
                 </figure>
                 <figure class="mugshot">
                     <img class="mugshot-first" src="./assets/mugshots/student-2.png" alt="">
@@ -77,6 +78,7 @@
                         <h3>Emre</h3>
                         <p>00</p>
                     </figcaption>
+                    <div class="eye-bar"></div>
                 </figure>
                 <figure class="mugshot">
                     <img class="mugshot-first" src="./assets/mugshots/student-3.png" alt="">
@@ -85,6 +87,7 @@
                         <h3 >Caitlin</h3>
                         <p>00</p>
                     </figcaption>
+                    <div class="eye-bar"></div>
                 </figure>
                 <figure class="mugshot">
                     <img class="mugshot-first" src="./assets/mugshots/student-4.png" alt="">
@@ -93,6 +96,7 @@
                         <h3 >Ayoub</h3>
                         <p>00</p>
                     </figcaption>
+                    <div class="eye-bar"></div>
                 </figure>
                 <figure class="mugshot">
                     <img class="mugshot-first" src="./assets/mugshots/student-5.png" alt="">
@@ -101,6 +105,7 @@
                         <h3 >Ilias</h3>
                         <p>00</p>
                     </figcaption>
+                    <div class="eye-bar"></div>
                 </figure>
                 <figure class="mugshot">
                     <img class="mugshot-first" src="./assets/mugshots/student-6.png" alt="">
@@ -109,6 +114,7 @@
                         <h3>Isaac</h3>
                         <p>00</p>
                     </figcaption>
+                    <div class="eye-bar"></div>
                 </figure>
                 <figure class="mugshot">
                     <img class="mugshot-first" src="./assets/mugshots/student-7.png" alt="">
@@ -117,6 +123,7 @@
                         <h3>Kate</h3>
                         <p>00</p>
                     </figcaption>
+                    <div class="eye-bar"></div>
                 </figure>
                 <figure class="mugshot">
                     <img class="mugshot-first" src="./assets/mugshots/student-8.png" alt="">
@@ -125,6 +132,7 @@
                         <h3>Kayleigh</h3>
                         <p>00</p>
                     </figcaption>
+                    <div class="eye-bar"></div>
                 </figure>
                 <figure class="mugshot">
                     <img class="mugshot-first" src="./assets/mugshots/student-9.png" alt="">
@@ -133,6 +141,7 @@
                         <h3>Mohamed</h3>
                         <p>00</p>
                     </figcaption>
+                    <div class="eye-bar"></div>
                 </figure>
                 <figure class="mugshot">
                     <img class="mugshot-first" src="./assets/mugshots/student-10.png" alt="">
@@ -141,6 +150,7 @@
                         <h3>Lesther</h3>
                         <p>00</p>
                     </figcaption>
+                    <div class="eye-bar"></div>
                 </figure>
                 <figure class="mugshot">
                     <img class="mugshot-first" src="./assets/mugshots/student-11.png" alt="">
@@ -149,6 +159,7 @@
                         <h3>Khouloud</h3>
                         <p>00</p>
                     </figcaption>
+                    <div class="eye-bar"></div>
                 </figure>
                 <figure class="mugshot">
                     <img class="mugshot-first" src="./assets/mugshots/student-12.png" alt="">
@@ -157,6 +168,7 @@
                         <h3>Khitam</h3>
                         <p>00</p>
                     </figcaption>
+                    <div class="eye-bar"></div>
                 </figure>
                 <figure class="mugshot">
                     <img class="mugshot-first" src="./assets/mugshots/student-13.png" alt="">
@@ -165,6 +177,7 @@
                         <h3>Mouaad</h3>
                         <p>00</p>
                     </figcaption>
+                    <div class="eye-bar"></div>
                 </figure>
                 <figure class="mugshot">
                     <img class="mugshot-first" src="./assets/mugshots/student-14.png" alt="">
@@ -173,6 +186,7 @@
                         <h3>Oumaima</h3>
                         <p>00</p>
                     </figcaption>
+                    <div class="eye-bar"></div>
                 </figure>
                 <figure class="mugshot">
                     <img class="mugshot-first" src="./assets/mugshots/student-15.png" alt="">
@@ -181,6 +195,7 @@
                         <h3>Rowan</h3>
                         <p>00</p>
                     </figcaption>
+                    <div class="eye-bar glasses"></div>
                 </figure>
                 <figure class="mugshot">
                     <img class="mugshot-first" src="./assets/mugshots/student-16.png" alt="">
@@ -189,6 +204,7 @@
                         <h3>Roxy</h3>
                         <p>25</p>
                     </figcaption>
+                    <div class="eye-bar"></div>
                 </figure>
                 <figure class="mugshot">
                     <img class="mugshot-first" src="./assets/mugshots/student-17.png" alt="">
@@ -197,6 +213,7 @@
                         <h3>Tjeerd</h3>
                         <p>00</p>
                     </figcaption>
+                    <div class="eye-bar glasses"></div>
                 </figure>
                 <figure class="mugshot">
                     <img class="mugshot-first" src="./assets/mugshots/student-18.png" alt="">
@@ -205,6 +222,7 @@
                         <h3>Tin</h3>
                         <p>00</p>
                     </figcaption>
+                    <div class="eye-bar glasses"></div>
                 </figure>
                 <figure class="mugshot">
                     <img class="mugshot-first" src="./assets/mugshots/student-19.png" alt="">
@@ -213,6 +231,7 @@
                         <h3>Semih</h3>
                         <p>00</p>
                     </figcaption>
+                    <div class="eye-bar"></div>
                 </figure>
                 <figure class="mugshot">
                     <img class="mugshot-first" src="./assets/mugshots/student-20.png" alt="">
@@ -221,6 +240,7 @@
                         <h3>Seb</h3>
                         <p>00</p>
                     </figcaption>
+                    <div class="eye-bar"></div>
                 </figure>
                 <figure class="mugshot">
                     <img class="mugshot-first" src="./assets/mugshots/student-21.png" alt="">
@@ -229,6 +249,7 @@
                         <h3>Sivar</h3>
                         <p>00</p>
                     </figcaption>
+                    <div class="eye-bar"></div>
                 </figure>
                 <figure class="mugshot">
                     <img class="mugshot-first" src="./assets/mugshots/student-22.png" alt="">
@@ -237,6 +258,7 @@
                         <h3>Sven</h3>
                         <p>00</p>
                     </figcaption>
+                    <div class="eye-bar"></div>
                 </figure>
                 <figure class="mugshot">
                     <img class="mugshot-first" src="./assets/mugshots/student-23.png" alt="">
@@ -245,6 +267,7 @@
                         <h3>Thomas</h3>
                         <p>00</p>
                     </figcaption>
+                    <div class="eye-bar"></div>
                 </figure>
                 <figure class="mugshot">
                     <img class="mugshot-first" src="./assets/mugshots/student-24.png" alt="">
@@ -253,6 +276,7 @@
                         <h3>Angle</h3>
                         <p>00</p>
                     </figcaption>
+                    <div class="eye-bar angle"></div>
                 </figure>
                 </section>
                 <button>Meer</button>
