kleine aanpassingen om overzichtelijker te makenhover effect

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                         <h3>Kate</h3>
                         <p>00</p>
                     </figcaption>
-                    <div class="eye-bar"></div>
+                    <div class="eye-bar glasses"></div>
                 </figure>
                 <figure class="mugshot">
                     <img class="mugshot-first" src="./assets/mugshots/student-8.png" alt="">
