--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                     <div class="eye-bar angle"></div>
                 </figure>
                 </section>
-                <button>Meer</button>
+                <a class="load-more" href="">Zie meer</a>
             </article>
         <!-- Dit doet Gijs -->
         <section>
