--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                     <div class="eye-bar angle"></div>
                 </figure>
             </section>
-            <button>Meer</button>
+            <button>Meer Foto's</button>
         </article>
         <!-- Dit doet Gijs -->
         <section>
