--- a/index.html
+++ b/index.html
@@ -22,18 +22,20 @@
     <main>
         <!-- Dit doet Semih -->
         <article>
-            <div id="welcome" class="welcome-page">
-                <h1>Welkom bij 1I</h1>
+            <section>
+                <div id="welcome" class="welcome-page">
+                    <h1>Welkom bij 1I</h1>
                 <div class="welcome-text">
                     <p>Zoek hieronder je klasgenoot op</p>
                 </div>
-                <div class="search">
-                    <form>
-                        <input type="search">
-                        <button type="submit"></button>
-                    </form>
+                    <div class="search">
+                        <form>
+                            <input type="search">
+                            <button type="submit"></button>
+                        </form>
+                    </div>
                 </div>
-            </div>
+            </section>
         </article>
         <!-- Dit doet Gijs -->
         <section>
