--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <!-- Dit doet Gijs -->
         <section>
             <svg class="wave1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-                <path fill="black" fill-opacity="1" d="M0,128L48,112C96,96,192,64,288,45.35
+                <path fill="#F5F1EA" fill-opacity="1" d="M0,128L48,112C96,96,192,64,288,45.35
          C384,26.5,480,21.5,576,34.65
          C672,48,768,80,864,98.65
          C960,117.5,1056,122.5,1152,106.65
@@ -48,7 +48,7 @@
 
             </svg>
             <svg class="wave2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-                <path fill="black" fill-opacity="1" d="M0,128L48,112C96,96,192,64,288,45.35
+                <path fill="#F5F1EA" fill-opacity="1" d="M0,128L48,112C96,96,192,64,288,45.35
          C384,26.5,480,21.5,576,34.65
          C672,48,768,80,864,98.65
          C960,117.5,1056,122.5,1152,106.65
@@ -76,7 +76,7 @@
                     <img class="mugshot-after" src="./assets/mugshots/student-3-2.png" alt="">
                     <figcaption>
                         <h3>Caitlin</h3>
-                        <p>00</p>
+                        <p> 00</p>
                     </figcaption>
                     <div class="eye-bar"></div>
                 </figure>
@@ -284,7 +284,7 @@
         <!-- Dit doet Gijs -->
         <section>
             <svg class="wave1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-                <path fill="black" fill-opacity="1" d="M0,128L48,112C96,96,192,64,288,45.35
+                <path fill="#F5F1EA" fill-opacity="1" d="M0,128L48,112C96,96,192,64,288,45.35
          C384,26.5,480,21.5,576,34.65
          C672,48,768,80,864,98.65
          C960,117.5,1056,122.5,1152,106.65
@@ -294,7 +294,7 @@
 
             </svg>
             <svg class="wave2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-                <path fill="black" fill-opacity="1" d="M0,128L48,112C96,96,192,64,288,45.35
+                <path fill="#F5F1EA" fill-opacity="1" d="M0,128L48,112C96,96,192,64,288,45.35
          C384,26.5,480,21.5,576,34.65
          C672,48,768,80,864,98.65
          C960,117.5,1056,122.5,1152,106.65
