--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
                 </div>
                     <div class="search">
                         <form>
-                            <input type="search">
-                            <button type="submit"></button>
+                            <input type="search" placeholder="Zoek je Klasgenoten">
                         </form>
                     </div>
                 </div>
