--- a/index.html
+++ b/index.html
@@ -23,17 +23,14 @@
         <!-- Dit doet Semih -->
         <article>
             <section>
-                <div id="welcome" class="welcome-page">
+                <article id="welcome" class="welcome-page">
                     <h1>Welkom bij 1I</h1>
-                <div class="welcome-text">
                     <p>Zoek hieronder je klasgenoot op</p>
-                </div>
-                    <div class="search">
                         <form>
                             <input type="search" placeholder="Zoek je Klasgenoten">
                         </form>
                     </div>
-                </div>
+                </article>
             </section>
         </article>
         <!-- Dit doet Gijs -->
