--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                         <p>00</p>
                     </figcaption>
                     <div class="eye-bar"></div>
+                    <!--https://emrebahar0912.github.io/your-tribe-profile-card/-->
                 </figure>
                 <figure class="mugshot">
                     <img class="mugshot-first" src="./assets/mugshots/student-3.png" alt="">
@@ -56,6 +57,7 @@
                         <p> 00</p>
                     </figcaption>
                     <div class="eye-bar"></div>
+                    <!--https://caitlin-fdnd.github.io/your-tribe-profile-card/-->
                 </figure>
                 <figure class="mugshot">
                     <img class="mugshot-first" src="./assets/mugshots/student-4.png" alt="">
@@ -79,10 +81,11 @@
                     <img class="mugshot-first" src="./assets/mugshots/student-6.png" alt="">
                     <img class="mugshot-after" src="./assets/mugshots/student-6-2.png" alt="">
                     <figcaption>
-                        <h3>Isaac</h3>
+                        <h3>Isaac</h3> 
                         <p>00</p>
                     </figcaption>
-                    <div class="eye-bar"></div>
+                    <div class="eye-bar"></div> 
+                    <!--https://isaaceswa.github.io/your-tribe-profile-card/-->
                 </figure>
                 <figure class="mugshot">
                     <img class="mugshot-first" src="./assets/mugshots/student-7.png" alt="">
@@ -92,6 +95,7 @@
                         <p>00</p>
                     </figcaption>
                     <div class="eye-bar glasses"></div>
+                    <!--https://kitkatisvibing.github.io/your-tribe-profile-card/-->
                 </figure>
                 <figure class="mugshot">
                     <img class="mugshot-first" src="./assets/mugshots/student-8.png" alt="">
@@ -101,6 +105,7 @@
                         <p>00</p>
                     </figcaption>
                     <div class="eye-bar"></div>
+                    <!--https://kayleighhhhh.github.io/profile-card-kayleigh/-->
                 </figure>
                 <figure class="mugshot">
                     <img class="mugshot-first" src="./assets/mugshots/student-9.png" alt="">
@@ -110,6 +115,7 @@
                         <p>00</p>
                     </figcaption>
                     <div class="eye-bar"></div>
+                    <!--https://mohamedelib.github.io/your-tribe-profile-card/-->
                 </figure>
                 <figure class="mugshot">
                     <img class="mugshot-first" src="./assets/mugshots/student-10.png" alt="">
@@ -119,6 +125,7 @@
                         <p>00</p>
                     </figcaption>
                     <div class="eye-bar"></div>
+                    <!--https://lestherluis.github.io/lesthercard/-->
                 </figure>
                 <figure class="mugshot">
                     <img class="mugshot-first" src="./assets/mugshots/student-11.png" alt="">
@@ -137,6 +144,7 @@
                         <p>00</p>
                     </figcaption>
                     <div class="eye-bar"></div>
+                    <!--https://khiettt.github.io/your-tribe-profile-card/-->
                 </figure>
                 <figure class="mugshot">
                     <img class="mugshot-first" src="./assets/mugshots/student-13.png" alt="">
@@ -155,6 +163,7 @@
                         <p>00</p>
                     </figcaption>
                     <div class="eye-bar"></div>
+
                 </figure>
                 <figure class="mugshot">
                     <img class="mugshot-first" src="./assets/mugshots/student-15.png" alt="">
@@ -164,6 +173,7 @@
                         <p>00</p>
                     </figcaption>
                     <div class="eye-bar glasses"></div>
+                    <!--https://scar055.github.io/your-tribe-profile-card/-->
                 </figure>
                 <figure class="mugshot">
                     <img class="mugshot-first" src="./assets/mugshots/student-16.png" alt="">
@@ -173,6 +183,7 @@
                         <p>25</p>
                     </figcaption>
                     <div class="eye-bar"></div>
+                    <!--https://rox-codelabs.github.io/your-tribe-profile-card/-->
                 </figure>
                 <figure class="mugshot">
                     <img class="mugshot-first" src="./assets/mugshots/student-17.png" alt="">
@@ -182,6 +193,7 @@
                         <p>00</p>
                     </figcaption>
                     <div class="eye-bar glasses"></div>
+                    <!--https://tjeerd-jw.github.io/your-tribe-profile-card/-->
                 </figure>
                 <figure class="mugshot">
                     <img class="mugshot-first" src="./assets/mugshots/student-18.png" alt="">
@@ -191,6 +203,7 @@
                         <p>00</p>
                     </figcaption>
                     <div class="eye-bar glasses"></div>
+                    <!--https://webtins.github.io/your-tribe-profile-card/-->
                 </figure>
                 <figure class="mugshot">
                     <img class="mugshot-first" src="./assets/mugshots/student-19.png" alt="">
@@ -200,6 +213,7 @@
                         <p>00</p>
                     </figcaption>
                     <div class="eye-bar"></div>
+                    <!--https://hexterty46.github.io/your-tribe-profile-card/-->
                 </figure>
                 <figure class="mugshot">
                     <img class="mugshot-first" src="./assets/mugshots/student-20.png" alt="">
@@ -209,6 +223,7 @@
                         <p>00</p>
                     </figcaption>
                     <div class="eye-bar"></div>
+                    <!--geen link-->
                 </figure>
                 <figure class="mugshot">
                     <img class="mugshot-first" src="./assets/mugshots/student-21.png" alt="">
@@ -218,6 +233,7 @@
                         <p>00</p>
                     </figcaption>
                     <div class="eye-bar"></div>
+                    <!--geen link-->
                 </figure>
                 <figure class="mugshot">
                     <img class="mugshot-first" src="./assets/mugshots/student-22.png" alt="">
@@ -227,6 +243,7 @@
                         <p>00</p>
                     </figcaption>
                     <div class="eye-bar"></div>
+                    <!--https://svenvandijk22.github.io/your-tribe-profile-card/-->
                 </figure>
                 <figure class="mugshot">
                     <img class="mugshot-first" src="./assets/mugshots/student-23.png" alt="">
@@ -236,6 +253,7 @@
                         <p>00</p>
                     </figcaption>
                     <div class="eye-bar"></div>
+                    <!--https://thomasseisveld.github.io/profilecard-Thomas/-->
                 </figure>
                 <figure class="mugshot">
                     <img class="mugshot-first" src="./assets/mugshots/student-1.png" alt="">
@@ -244,7 +262,8 @@
                         <h3>Gijs</h3>
                         <p>00</p>
                     </figcaption>
-                    <div class="eye-bar"></div><!-- iets anders dan div??????? -->
+                    <div class="eye-bar"></div>
+                    <!-- https://gijscreator.github.io/your-tribe-profile-card/ -->
                 </figure>
                 <figure class="mugshot">
                     <img class="mugshot-first" src="./assets/mugshots/student-24.png" alt="">
@@ -254,6 +273,7 @@
                         <p>00</p>
                     </figcaption>
                     <div class="eye-bar angle"></div>
+                    <!--https://angelaaliyah12.github.io/your-tribe-profile-card/-->
                 </figure>
             </section>
             <button>Meer Foto's</button>
