fotos docenten toegevoegd

--- a/index.html
+++ b/index.html
@@ -276,6 +276,50 @@
                     <!--https://angelaaliyah12.github.io/your-tribe-profile-card/-->
                 </figure>
             </section>
+            <section>
+                <figure>
+                    <img src="./assets/mugshots/docent-1.png" alt="">
+                    <img src="./assets/mugshots/docent-1-2.png" alt="">
+                    <figcaption>
+                        <h3>Suus</h3>
+                    </figcaption>
+                </figure>
+                <figure>
+                    <img src="./assets/mugshots/docent-2.png" alt="">
+                    <img src="./assets/mugshots/docent-2-2.png" alt="">
+                    <figcaption>
+                        <h3>Koop</h3>
+                    </figcaption>
+                </figure>
+                <figure>
+                    <img src="./assets/mugshots/docent-3.png" alt="">
+                    <img src="./assets/mugshots/docent-3-2.png" alt="">
+                    <figcaption>
+                        <h3>Joost</h3>
+                    </figcaption>
+                </figure>
+                <figure>
+                    <img src="./assets/mugshots/docent-4.png" alt="">
+                    <img src="./assets/mugshots/docent-4-2.png" alt="">
+                    <figcaption>
+                        <h3>Cyd</h3>
+                    </figcaption>
+                </figure>
+                <figure>
+                    <img src="./assets/mugshots/docent-5.png" alt="">
+                    <img src="./assets/mugshots/docent-5-2.png" alt="">
+                    <figcaption>
+                        <h3>Krijn</h3>
+                    </figcaption>
+                </figure>
+                <figure>
+                    <img src="./assets/mugshots/docent-6.png" alt="">
+                    <img src="./assets/mugshots/docent-6-2.png" alt="">
+                    <figcaption>
+                        <h3>Justus</h3>
+                    </figcaption>
+                </figure>
+            </section>
             <button>Meer Foto's</button>
         </article>
         <!-- Dit doet Gijs -->
