--- a/index.html
+++ b/index.html
@@ -276,7 +276,8 @@
                     <!--https://angelaaliyah12.github.io/your-tribe-profile-card/-->
                 </figure>
             </section>
-            <section>
+            <section class="mugshot-image-container">
+                <h2 id="docenten">Docenten</h2>
                 <figure class="mugshot">
                     <img class="mugshot-first" src="./assets/mugshots/docent-1.png" alt="">
                     <img class="mugshot-after" src="./assets/mugshots/docent-1-2.png" alt="">
