--- a/index.html
+++ b/index.html
@@ -25,6 +25,28 @@
             <section>
                 <article id="welcome" class="welcome-page">
                     <h1>Welkom bij 1I</h1>
+                      <section>
+            <svg class="wave1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+                <path fill="#F5F1EA" fill-opacity="1" d="M0,128L48,112C96,96,192,64,288,45.35
+         C384,26.5,480,21.5,576,34.65
+         C672,48,768,80,864,98.65
+         C960,117.5,1056,122.5,1152,106.65
+         C1248,90.5,1344,53.5,1392,34.65
+         L1440,16L1440,160L0,160Z">
+                </path>
+
+            </svg>
+            <svg class="wave2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+                <path fill="#F5F1EA" fill-opacity="1" d="M0,128L48,112C96,96,192,64,288,45.35
+         C384,26.5,480,21.5,576,34.65
+         C672,48,768,80,864,98.65
+         C960,117.5,1056,122.5,1152,106.65
+         C1248,90.5,1344,53.5,1392,34.65
+         L1440,16L1440,0L0,0Z">
+                </path>
+
+            </svg>
+        </section>
                     <p>Zoek hieronder je klasgenoot op</p>
                         <form>
                             <input type="search" placeholder="Zoek je Klasgenoten">
@@ -275,7 +297,31 @@
                     <div class="eye-bar angle"></div>
                     <!--https://angelaaliyah12.github.io/your-tribe-profile-card/-->
                 </figure>
+               
             </section>
+            <button>Meer Foto's</button>
+            <section>
+                <svg class="wave1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+                <path fill="#F5F1EA" fill-opacity="1" d="M0,128L48,112C96,96,192,64,288,45.35
+                C384,26.5,480,21.5,576,34.65
+                C672,48,768,80,864,98.65
+                C960,117.5,1056,122.5,1152,106.65
+                C1248,90.5,1344,53.5,1392,34.65
+                L1440,16L1440,160L0,160Z">
+                </path>
+
+                </svg>
+                <svg class="wave2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+                <path fill="#F5F1EA" fill-opacity="1" d="M0,128L48,112C96,96,192,64,288,45.35
+                C384,26.5,480,21.5,576,34.65
+                C672,48,768,80,864,98.65
+                C960,117.5,1056,122.5,1152,106.65
+                C1248,90.5,1344,53.5,1392,34.65
+                L1440,16L1440,0L0,0Z">
+                </path>
+
+                </svg>
+        </section>
             <section class="mugshot-image-container">
                 <h2 id="docenten">Docenten</h2>
                 <figure class="mugshot">
@@ -327,7 +373,6 @@
                     <div class="eye-bar"></div>
                 </figure>
             </section>
-            <button>Meer Foto's</button>
         </article>
         <!-- Dit doet Gijs -->
         <section>
