--- a/index.html
+++ b/index.html
@@ -429,9 +429,9 @@
     <footer id="credits" class="footer-layout">
         <article class="logo-madeby">
             <p class="madeby">
-                Gemaakt door:
+                Gemaakt door
             </p>
-            <img class="logo" src="assets/image.png">
+            <img class="logo" src="./assets/test-logo.png">
         </article>
         <article class="madeby 1">
             <img class="image-footer" src="assets/roxy.png">
